kustomize/overlays/prod/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-deployment
spec:
  template:
    spec:
      containers:
        - name: caddy
          imagePullPolicy: IfNotPresent
